Bug fixed, two or more banners in the same page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
           <img src="build/img/banner-lorem.jpg" alt="Banner">
         </a>
       </div>
-
+      
+      <div class="banner2">
+        <a href="#">
+          <img src="build/img/banner-maneiro.jpg" alt="Banner">
+        </a>
+        <a href="#">
+          <img src="build/img/banner-melhor-ainda.jpg" alt="Banner">
+        </a>
+        <a href="#">
+          <img src="build/img/banner-lorem.jpg" alt="Banner">
+        </a>
+      </div>
       <script src="build/js/jquery.min.js"></script>
       <script src="build/js/paxaslider.min.js"></script>
       <script src="build/js/main.js"></script>
