--- a/index.html
+++ b/index.html
@@ -2,37 +2,51 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>PaxaSlider - Examples</title>
+    <!-- Link to paxaSlider's CSS -->
     <link rel="stylesheet" href="build/css/paxaslider.css">
+    <!-- Link to your custom css -->
     <link rel="stylesheet" href="build/css/custom.css">
   </head>
     <body>
       
-      <div class="banner">
-        <a href="#">
-          <img src="build/img/banner-maneiro.jpg" alt="Banner">
-        </a>
-        <a href="#">
-          <img src="build/img/banner-melhor-ainda.jpg" alt="Banner">
-        </a>
-        <a href="#">
-          <img src="build/img/banner-lorem.jpg" alt="Banner">
-        </a>
-      </div>
-      
       <div class="banner2">
         <a href="#">
-          <img src="build/img/banner-maneiro.jpg" alt="Banner">
+          <img src="build/img/banner1.jpg" alt="Banner">
         </a>
         <a href="#">
-          <img src="build/img/banner-melhor-ainda.jpg" alt="Banner">
+          <img src="build/img/banner2.jpg" alt="Banner">
         </a>
         <a href="#">
-          <img src="build/img/banner-lorem.jpg" alt="Banner">
+          <img src="build/img/banner3.jpg" alt="Banner">
+        </a>
+        <a href="#">
+          <img src="build/img/banner4.jpg" alt="Banner">
+        </a>
+        <a href="#">
+          <img src="build/img/banner5.jpg" alt="Banner">
         </a>
       </div>
+      <div class="banner">
+        <a href="#" data-label="Maneiro">
+          <img src="build/img/banner-maneiro.jpg" alt="Banner">
+        </a>
+        <a href="#" data-label="Lorem">
+          <img src="build/img/banner-melhor-ainda.jpg" alt="Banner">
+        </a>
+        <a href="#" data-label="Ipsum">
+          <img src="build/img/banner-lorem.jpg" alt="Banner">
+        </a>
+        <a href="#" data-label="Sit Dolor">
+          <img src="build/img/banner-melhor-ainda.jpg" alt="Banner">
+        </a>
+      </div>
+
+      <!-- Link to Jquery, version in use 1.11.1 -->
       <script src="build/js/jquery.min.js"></script>
+      <!-- Link to Paxaslider's JS -->
       <script src="build/js/paxaslider.min.js"></script>
+      <!-- Link to your custom js -->
       <script src="build/js/main.js"></script>
     </body>
 </html>
