--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         </a>
       </div>
       <div class="banner">
-        <a href="#" data-label="Maneiro">
+        <a href="#" data-label="Meu Pau de óculos">
           <img src="build/img/banner-maneiro.jpg" alt="Banner">
         </a>
-        <a href="#" data-label="Lorem">
+        <a href="#" data-label="Meu Pau de óculos">
           <img src="build/img/banner-melhor-ainda.jpg" alt="Banner">
         </a>
-        <a href="#" data-label="Ipsum">
+        <a href="#" data-label="Meu Pau de óculos">
           <img src="build/img/banner-lorem.jpg" alt="Banner">
         </a>
-        <a href="#" data-label="Sit Dolor">
+        <a href="#" data-label="Meu Pau de óculos">
           <img src="build/img/banner-melhor-ainda.jpg" alt="Banner">
         </a>
       </div>
