Refactoring js, somethings left undone

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         </a>
       </div>
       <div class="banner">
-        <a href="#" data-label="Meu Pau de óculos">
+        <a href="#" data-tabTitle="Apenas um Exemplo">
           <img src="build/img/banner-maneiro.jpg" alt="Banner">
         </a>
-        <a href="#" data-label="Meu Pau de óculos">
+        <a href="#" data-tabTitle="Apenas outro Exemplo">
           <img src="build/img/banner-melhor-ainda.jpg" alt="Banner">
         </a>
-        <a href="#" data-label="Meu Pau de óculos">
+        <a href="#" data-tabTitle="Only an Example">
           <img src="build/img/banner-lorem.jpg" alt="Banner">
         </a>
-        <a href="#" data-label="Meu Pau de óculos">
+        <a href="#" data-tabTitle="Another One">
           <img src="build/img/banner-melhor-ainda.jpg" alt="Banner">
         </a>
       </div>
