paxaslider now with navigation arrows, contrary direction, js improvement

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="build/css/custom.css">
   </head>
     <body>
-      
+
       <div class="banner2">
+      <!-- The 'arrow' class in only for style, the leftArrow and rightArrow are for JS and Style -->
+        <nav class="arrow leftArrow"></nav>
+        <nav class="arrow rightArrow"></nav>
         <a href="#">
           <img src="build/img/banner1.jpg" alt="Banner">
         </a>
